Version 2.0.3 - Unnamed.
----------
2005-06-??

	ken:
		* Enabled amuleweb to work from within the Mac application bundle
		* Fixed Online Signature not actually being enabled when user sets the
		  preference

	Kry:
		* Fixed wrong MD5 hash calculation on 64 bits arch.
		  This fixes storing the wrong EC/webserver password on config file.

	lfroen:
		* New daemon socket code, event based. Improved reliability and 
		  speed problems fixed.


Version 2.0.2 - The " [Your Ad Here] " version.
----------
2005-06-04

	boutros:
		* Ported the eMule Chicane web template to aMule.

	GonoszTopi:
		* Fixed #421: 'In Windows XP it lets to choose Konqueror,
		  Galeon and other Unix based browsers.'
		* Fixed #406 and #380: 'some clients get an unexpected very
		  high priority'

	ken:
		* Fixed a hang-using-100%-cpu-on-exit bug
		* Fixed a crash when enabling UDP after startup

	Kry:
		* Added Version Check (you can disable it on preferences).
		* Added "source comes from" (on the "Time remaining" column)
		* Now you can compile aMule without gettext, using --disable-nls
		  Additionally, aMule no longer stops configure if there is no gettext installed.
		* Fixed aMule shutting down if a source seeds file is 0-size.
		* Fixed HTTP download code not returning proper error code (causing crashes).
		* Fixed OS_Info packet only being sent to downlaoding clients.
		* Fixed Solaris mount info file name.
		* Fixed includes on daemon for Solaris.
		* Fixed mldonkey detection. Did anyone notice mldonkey bans aMule?
		* Fixed SetAllTimeTransfered parameter size (thanks eylzo)
		* Fixed #430: "Sources order by priority/status"
		* Fixed #442: "Sort by 'Time Remaining' puts files which are not transferring first"
		* Fixed #453: "Add option to export links with AICH hashes"
		* Fixed #458: "Wrong gauge size on shared files control "

	volpol:
		* Ports display fix.
		* A4AF swap to this fix.

	Special Thanks To:

		* Bug reporters:
			Ateo
			BeFalou
			MrFaber
			xushi		
			